GNOME Bugzilla – Bug 785119
mxfdemux: Wrong PTS on some files
Last modified: 2017-07-25 08:51:03 UTC
The following file (in validate media test suite) ends up outputting wrong PTS. gst-launch-1.0 -v file:///$HOME/gst-validate/gst-integration-testsuites/medias/defaults/mxf/op2b-mpeg2-wave_hd.mxf ! mxfdemux ! video/mpeg ! fakesink silent=False It starts from * dts: 0:00:00.000000000, pts: 0:00:00.040000000 all the way to * dts: 0:00:01.880000000, pts: 0:00:01.800000000 But then it carries on with * dts: 0:00:01.920000000, pts: 0:00:00.040000000 * dts: 0:00:01.960000000, pts: 0:00:00.080000000 ....
Makes sense. We need to keep the offset when switching between essence tracks
commit c2ef63a3bc93358250b203fc5a40ade7416e7a6e Author: Sebastian Dröge <sebastian@centricular.com> Date: Mon Jul 24 16:21:31 2017 +0300 mxfdemux: Keep track of component start positions and material track positions This allows us to know exactly where in the material track we are, and how to convert from a PTS for a source track to the actual PTS of the material track (i.e. by adding the component start position). https://bugzilla.gnome.org/show_bug.cgi?id=785119
commit 59f9bc05d29038e498ed4c96311adc567fe57bfd Author: Sebastian Dröge <sebastian@centricular.com> Date: Mon Jul 24 16:54:22 2017 +0300 mxfdemux: Use material track edit rate for component PTS offsetting